Kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-back
  template:
    metadata:
      labels:
        app: redis-back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: redis-back
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-back
spec:
  ports:
  - port: 6379
  selector:
    app: redis-back
