Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeauction-ingress
  namespace: kubeauction
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: auctions.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeauction-api
            port:
              number: 8080
